# zmq_message_bus

./: .gitignore  Cargo.toml  README.md  run_example.sh  run_message_bus.sh  run_pub_sub_example.sh  run_req_rep_example.sh
message_bus/: Cargo.toml  appconfig.toml
message_bus/src/: main.rs
message_bus_client/: Cargo.toml
message_bus_client/examples/: appconfig_client1.toml  appconfig_client2.toml  client1.rs  client2.rs  publisher_client1.rs  reqrep_client1.rs  reqrep_client2.rs  subscriber_client2.rs
message_bus_client/src/: lib.rs
src/: main.rs
