[package]
name = "zmq_message_bus"
version = "0.2.0"
authors = ["StefanMallia <5004438+StefanMallia@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zmq = "0.9"
chrono = "0.4.19"
config_loader = {version = "0.1.3", git="https://github.com/StefanMallia/config_loader", branch="main"}
publisher = {version = "0.3.2", git="https://github.com/StefanMallia/zmq_pub_sub", branch="main"}
subscriber = {version = "0.2.3", git="https://github.com/StefanMallia/zmq_pub_sub", branch="main"}
zmq_message_router = {version = "0.2.0", git="https://github.com/StefanMallia/zmq_req_rep_router", branch="main"}
rust_log = {version = "0.3.1", git="https://github.com/StefanMallia/rust_log", branch="main"}
