[package]
name = "zmq_message_bus_client"
version = "0.1.2"
authors = ["StefanMallia <5004438+StefanMallia@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zmq = "0.9"
tokio = { version = "1", features = ["full"] }
chrono = "0.4.19"
config_loader = {version = "0.1.0", git="https://github.com/StefanMallia/config_loader", branch="main"}
publisher = {version = "0.1.0", git="https://github.com/StefanMallia/zmq_pub_sub", branch="main"}
subscriber = {version = "0.1.0", git="https://github.com/StefanMallia/zmq_pub_sub", branch="main"}
zmq_message_router = {version = "0.1.0", git="https://github.com/StefanMallia/zmq_req_rep_router", branch="main"}
rep_server = { version = "0.1.0", git="https://github.com/StefanMallia/zmq_req_rep_router", branch="main" }
req_client = { version = "0.1.0", git="https://github.com/StefanMallia/zmq_req_rep_router", branch="main" }
futures = "0.3"
async-trait = "0.1.53"
